--- a/BootstrapWebApp/BootstrapWebApp/Views/Home/Index.cshtml
+++ b/BootstrapWebApp/BootstrapWebApp/Views/Home/Index.cshtml
@@ -8,7 +8,50 @@
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
-<div class="row">
+<h2>Opiskelijarekisteri</h2>
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>Opiskelijanumero</th>
+            <th>Nimi</th>
+            <th>Sähköpostiosoite</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>A15</td>
+            <td>Matti Meikäläinen</td>
+            <td>meikalainen@student.careeria.fi</td>
+        </tr>
+        <tr>
+            <td>Q95</td>
+            <td>Jane Doe</td>
+            <td>doe@student.careeria.fi</td>
+        </tr>
+        <tr>
+            <td>P33</td>
+            <td>John Doe</td>
+            <td>john.doe@student.careeria.fi</td>
+        </tr>
+        <tr>
+            <td>A15</td>
+            <td>Matti Meikäläinen</td>
+            <td>meikalainen@student.careeria.fi</td>
+        </tr>
+        <tr>
+            <td>Q95</td>
+            <td>Jane Doe</td>
+            <td>doe@student.careeria.fi</td>
+        </tr>
+        <tr>
+            <td>P33</td>
+            <td>John Doe</td>
+            <td>john.doe@student.careeria.fi</td>
+        </tr>
+    </tbody>
+</table>
+
+<div class="row hidden">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
