Esimerkki omien CSS-tyylien määrittämisestä. !important ei toimi!

--- a/BootstrapWebApp/BootstrapWebApp/Content/Site.css
+++ b/BootstrapWebApp/BootstrapWebApp/Content/Site.css
@@ -3,8 +3,12 @@
     padding-bottom: 20px;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
+.text-primary {
+    color: #b202ff !important;
+}
+
+    /* Set padding to keep content from hitting the edges */
+    .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
